# media-knowledge-pipeline

./: .env.example  .gitignore  ANKI_MENU_ENHANCEMENT_PLAN.md  ANKI_MENU_ENHANCEMENT_SUMMARY.md  BATCH_PROCESSING_FEATURE.md  CHANGELOG.md  CLI_WIZARD_ARCHITECTURE.md  CLI_WIZARD_MIGRATION_GUIDE.md  CLI_WIZARD_REDDESIGN_README.md  CLI_WIZARD_REDESIGN_PLAN.md  README.md  RELEASE_NOTES_v1.1.0.md  config.py  install.sh  main.py  media-knowledge  media-knowledge-interactive  media-knowledge-start  mksynth  monitor_progress.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py  test_progress.py  test_results.json  test_urls.txt  test_wrapper.sh  uninstall.sh
core/: __init__.py  anki_generator.py  document_processor.py  file_scanner.py  large_document_processor.py  media_preprocessor.py  prompts.py  synthesizer.py  transcriber.py
core/document_readers/: __init__.py  base.py  epub_reader.py  mobi_reader.py  pdf_reader.py
docs/: CLI_WRAPPER.md  FILE_SCANNER_FEATURE.md  MARKDOWN_OUTPUT_FEATURE.md  RUNNING_TESTS.md  VIDEO_AUDIO_TO_KNOWLEDGE.md
outputs/: 20essentialaiengineeringterms_results.json  ScreenRecording_02-05-2026 12_results.json  artificialgeneralintelligencelimitations_results.json  attentionmechanismexplained_results.json  automatingsoftwareapplications_results.json  buildingaiteacherassistant_results.json  combined_result.json  complete_test.json  diffusion-basedaimodels_results.json  mathmodellimitations_results.json  modelcontextprotocolimpact_results.json  relationshipcommitmentstrategies_results.json  result.json  smartersmallerlanguagemodels_results.json  vectorencodingtechniques_results.json
tests/: README.md  __init__.py  test_anki_adapter.py  test_anki_generator.py  test_anki_integration.py  test_anki_prompts.py  test_anki_schema.py  test_chunker.py  test_cli_anki.py  test_config.py  test_document_chunking.py  test_essay_synthesizer.py  test_file_handler.py  test_file_scanner.py  test_media_preprocessor.py  test_pipeline.py  test_prompts.py  test_synthesizer.py  test_transcriber.py
utils/: __init__.py  chunker.py  essay_from_existing.py  file_handler.py  folder_organizer.py  progress_tracker.py  timeout_manager.py  token_counter.py
(+76 files in other folders)
