[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "media-knowledge-pipeline"
version = "2.4.0"
description = "Extract and synthesize knowledge from video/audio content"
authors = [
    {name = "Jason Belcher", email = "belcher.jason@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai-whisper>=20231117",
    "ffmpeg-python>=0.2.0",
    "yt-dlp>=2026.2.4",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "filetype>=1.2.0",
    "pydantic>=2.0.0",
    "watchdog>=3.0.0",
    "PyMuPDF>=1.26.0",
    "ebooklib>=0.20",
    "mobi>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
]

[project.scripts]
media-knowledge = "media_knowledge.cli.app:app"

[project.urls]
Homepage = "https://github.com/JasonBBelcher/media-knowledge-pipeline"
Repository = "https://github.com/JasonBBelcher/media-knowledge-pipeline"
Issues = "https://github.com/JasonBBelcher/media-knowledge-pipeline/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
media_knowledge = ["cli/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"